--- a/Client/assets/css/hero-slide.css
+++ b/Client/assets/css/hero-slide.css
@@ -10,6 +10,11 @@
 	position: relative;
     margin-top: 90px;
 }
+
+#hero img{
+	width: 100%;
+	height: 100%;
+}
 #hero .carousel,
 #hero .carousel-inner,
 #hero .carousel-item,
@@ -127,13 +132,11 @@
 	
     #hero{
         height: 300px;
-		width: 100%;
-       
+		width: 100%;  
     }
 
    	
 }
-
 
 @media (max-width: 768px) {
 	#hero h2 {
@@ -168,6 +171,7 @@
 	
 	#hero{
 		margin-top: 70px;
+		width: 100%;
     }	
 }
 
@@ -175,6 +179,9 @@
 	#hero .carousel-control-prev,
 	#hero .carousel-control-next {
 		width: 5%;
+	}
+	#hero{
+		width: 100%;
 	}
 }
 @media (max-height: 500px) {
