--- a/Admin/assets/css/main.css
+++ b/Admin/assets/css/main.css
@@ -11,11 +11,16 @@
 #main .content{
 	background-color:#FFFFFF;
 	padding-top:20px;
+	min-height: 60vh;
 }
 @media (max-width: 1199px) {
 	#main {
 		padding: 20px;
 	}
+}
+#main .content .title3 {
+	display: flex;
+	flex-direction: row-reverse;
 }
 /* ------------------------**/
 .breadcrumb {
@@ -63,7 +68,7 @@
 }
 .card-body {
 	padding: 20px 20px 20px 20px;
-	width: 65% !important;
+	width: 70% !important;
 	
 	display: flex;
 	flex-direction: column;
