--- a/LayoutNhom8/LayoutNhom8/Areas/Admin/Views/DanhmucSanpham/Index.cshtml
+++ b/LayoutNhom8/LayoutNhom8/Areas/Admin/Views/DanhmucSanpham/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Danh mục sản phẩm";
     ViewBag.Link = "Quản lý danh mục sản phẩm";
-    ViewBag.Name = "QuanlyDanhmucSanpham";
+    ViewBag.Name = "DanhmucSanpham";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
