--- a/LayoutNhom8/LayoutNhom8/Areas/Admin/Views/Donhang/Index.cshtml
+++ b/LayoutNhom8/LayoutNhom8/Areas/Admin/Views/Donhang/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Đơn hàng";
     ViewBag.Link = "Quản lý đơn hàng";
-    ViewBag.Name = "QuanlyDonhang";
+    ViewBag.Name = "Donhang";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 @section CSSPartial{
