--- a/LayoutNhom8/LayoutNhom8/Areas/Admin/Views/Sanpham/Index.cshtml
+++ b/LayoutNhom8/LayoutNhom8/Areas/Admin/Views/Sanpham/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Sản phẩm";
     ViewBag.Link = "Quản lý sản phẩm";
-    ViewBag.Name = "QuanlySanpham";
+    ViewBag.Name = "Sanpham";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 @section CSSPartial{
