--- a/LayoutNhom8/LayoutNhom8/Areas/Admin/Views/Shared/_HeaderAdmin.cshtml
+++ b/LayoutNhom8/LayoutNhom8/Areas/Admin/Views/Shared/_HeaderAdmin.cshtml
@@ -29,7 +29,7 @@
                     </li>
 
                     <li>
-                        <a class="dropdown-item d-flex align-items-center" href="@Url.Action("ThongtinDangnhap","Home")">
+                        <a class="dropdown-item d-flex align-items-center" href="@Url.Action("ThongtinDangnhap","Taikhoan")">
                             <i class="bi bi-person"></i>
                             <span>Tài khoản</span>
                         </a>
@@ -39,7 +39,7 @@
                         <hr class="dropdown-divider">
                     </li>
                     <li>
-                        <a class="dropdown-item d-flex align-items-center" href="@Url.Action("Dangnhap","Home")">
+                        <a class="dropdown-item d-flex align-items-center" href="@Url.Action("Index","Dangnhap")">
                             <i class="bi bi-box-arrow-right"></i>
                             <span>Đăng xuất</span>
                         </a>
