--- a/LayoutNhom8/LayoutNhom8/Areas/Admin/Views/Taikhoan/Index.cshtml
+++ b/LayoutNhom8/LayoutNhom8/Areas/Admin/Views/Taikhoan/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Tài khoản";
     ViewBag.Link = "Quản lý tài khoản";
-    ViewBag.Name = "QuanlyTaikhoan";
+    ViewBag.Name = "Taikhoan";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 @section CSSPartial{
